# Programmazione

./: CMakeLists.txt  ConcreteObserver.h  File.cpp  File.h  LoadResources.cpp  LoadResources.h  MainWindow.cpp  MainWindow.h  Object.h  Observer.h  README.md  SecondWindow.cpp  SecondWindow.h  Subject.h  main.cpp
resources/: File3.txt
test/: CMakeLists.txt  runAllTests.cpp  test.cpp
